<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    	android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/submitter"/>
		<EditText android:id="@+id/submitter" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>    
   
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/amount"/>
		<EditText android:id="@+id/amount" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:numeric="decimal"/>
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/purpose"/>
		<EditText android:id="@+id/purpose" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
			<TableLayout android:id="@+id/recip_table"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">		
				<TableRow > 
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:text="@string/first_participant"/>
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:text="@string/share"/>
				</TableRow>
				<TableRow>
				    <EditText android:id="@+id/first_participant" 
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"/>
					<EditText android:id="@+id/first_share" 
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:numeric="decimal"/>	
					<Button
					    android:id="@+id/plus"
					    android:text="@string/plus"
					    android:layout_height="wrap_content"
					    android:layout_width="wrap_content"/>				
				</TableRow>
			</TableLayout>
			<Button android:id="@+id/confirm" 
			  		android:text="@string/confirm"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
	 	</LinearLayout>
	</ScrollView>	
	</LinearLayout>
